--- a/src/locales/en.yaml
+++ b/src/locales/en.yaml
@@ -151,7 +151,7 @@ views:
         match-aria: "Your match for the party '{party}' is at {percentage} %"
       section:
         heading: "Your result"
-        explanation: "This chart describes how much you and the respective parties agreed on the above theses. The higher the percentage, the more your positions match. Keep in mind, that this is no voting recommendation, but a tool for orientation and discussion."
+        explanation: "This chart describes how much you and the respective parties agreed on the above theses. The higher the percentage, the more your positions match. Keep in mind, that this is no voting recommendation, but a tool for orientation and discussion. We also recommend you to read the explanations of the parties below, and recommend you to look at party programs."
     compare:
       additional-analysis:
         heading: "Statistics"
@@ -204,9 +204,9 @@ views:
       answer:
         skip:
           status-text: "unknown"
-          content: "The party '{party}' did not provide any answers or position regarding this thesis."
+          content: "No answer or position given."
         empty:
-          content: "The party '{party}' did not provide any statement to explain their position regarding this thesis."
+          content: "No explanation given."
       section:
         heading: "Their answers"
         explanation: "The parties typically provide statements for every thesis to explain their reasoning. It is not always obvious why a party assumes a certain position so it is recommended to read this statements or the respective election manifestos."
